--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
     "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
+    "ionic:serve": "ionic-app-scripts serve",
+    "postinstall": "typings install dt~core-js@0.9.7+20161130133742 --global"
   },
   "dependencies": {
     "@angular/common": "4.1.3",
@@ -33,6 +34,9 @@
   "devDependencies": {
     "@ionic/app-scripts": "2.0.2",
     "@ionic/cli-plugin-ionic-angular": "1.3.2",
+    "@types/core-js": "^0.9.42",
+    "core-js": "^2.4.1",
+    "ionic": "3.6.0",
     "typescript": "2.3.4"
   },
   "description": "An Ionic project"
